kstars (4:4.11.3-4) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Backport upstream commits 3231f23c31896b1da601e7a0704443d1181a0604
    (as upstream_tests-split-init-tearup.patch) and
    bf2cb5653908863eee0ee6c6c05f87ba38886fa3 (as
    upstream_tests-use-proper-temporary-files.patch) to make tests properly
    use temporary files instead of relying on ~/.kde.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 30 Nov 2013 16:44:00 +0100

kstars (4:4.11.3-3) unstable; urgency=low

  * Add a homedir for the tests. (Closes: #730327)

 -- Maximiliano Curia <maxy@debian.org>  Tue, 26 Nov 2013 21:02:23 +0100

kstars (4:4.11.3-2) unstable; urgency=low

  * Enable tests.
  * Create a kstars-dbg package. (Closes: #694100)
  * Bump Standards-Version to 3.9.5, no changes required.
  * Update build dependencies.
  * New patch: link_pthread.diff, needed by libindi.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 22 Nov 2013 10:15:01 +0100

kstars (4:4.11.3-1) unstable; urgency=low

  * New upstream release.
  * Update build dependencies.
  * Switch to libeigen3-dev, thanks to Anton Gladky. (Closes: #726644)

 -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 17:47:13 +0100

kstars (4:4.11.2-1) experimental; urgency=low

  * New upstream release.

 -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Oct 2013 16:52:41 +0200

kstars (4:4.10.5-1) unstable; urgency=low

  * New upstream release.
  * Remove upstream_#undef-TIME_UTC-to-fix-conflict-with-glibc.diff,
    already applied upstream.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Jul 2013 16:37:45 +0200

kstars (4:4.10.4-1) experimental; urgency=low

  * New upstream release.
  * Bump debhelper build-dep and compat to 9.
  * Bump Standards-Version to 3.9.4.
  * Update vcs fields.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 14:30:34 +0200

kstars (4:4.10.2-1) experimental; urgency=low

  * New upstream release.

  [ Diane Trout ]
  * Bump kde-sc-dev-latest build dependency to 4.10.2.