@@ -6,6 +6,7 @@ kstars (4:4.11.3-4) UNRELEASED; urgency=low
     bf2cb5653908863eee0ee6c6c05f87ba38886fa3 (as
     upstream_tests-use-proper-temporary-files.patch) to make tests properly
     use temporary files instead of relying on ~/.kde.
+  * Remove the custom home for tests, should not be needed anymore now.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 30 Nov 2013 16:44:00 +0100
 
